--- a/SuggestionsAppUI/appsettings.Development.json
+++ b/SuggestionsAppUI/appsettings.Development.json
@@ -6,5 +6,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "DatabaseName": "devSuggestionsApp"
+  "DatabaseName": "devSuggestionsApp",
+  "Auth0": {
+    "Domain": "",
+    "ClientId": "",
+    "ClientSecret": ""
+  }
 }
